Fix: issue with project-shadow overflow fixed

--- a/css/pages/_index.css
+++ b/css/pages/_index.css
@@ -70,8 +70,8 @@
   margin-bottom: 80px;
 }
 
-.img-container-drop-shadow {
-  filter: drop-shadow(4px 4px 8px rgba(48, 54, 65, 0.18));
+.project-shadow {
+  filter: drop-shadow(2px 2px 4px rgba(48, 54, 65, 0.18));
 }
 
 .img-container {
